--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "graphql": "^14.5.8",
     "graphql-import": "^0.7.1",
     "graphql-scalars": "^1.0.6",
+    "graphql-tools": "^4.0.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.9"
   },
