--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-server": "^2.9.16",
     "bcrypt": "^3.0.7",
+    "cloudinary": "^1.19.0",
     "graphql": "^14.5.8",
     "graphql-import": "^0.7.1",
     "graphql-scalars": "^1.0.6",
